Mejoras interfaz Mazmorra

--- a/src/app/comun/atributo/atributo.component.html
+++ b/src/app/comun/atributo/atributo.component.html
@@ -13,5 +13,7 @@
     <img *ngIf="tipo=='vitalidad'" class="icono" src="./assets/Iconos/Icono-Vitalidad.png"/>
     <img *ngIf="tipo=='oro'" class="icono" src="./assets/Iconos/Icono-Moneda.png"/>
     <img *ngIf="tipo=='alcance'" style="filter: invert(1)" class="icono" src="./assets/Iconos/alcance.png"/>
+    <img *ngIf="tipo=='dado'" style="filter: invert(1)" class="icono" src="./assets/Iconos/dado.png"/>
+    <img *ngIf="tipo=='critico'" class="icono" src="./assets/Iconos/critico.png"/>
     <div class="frameAtributo"></div>
 </div>
