--- a/src/app/comun/mazmorra/mazmorra.component.html
+++ b/src/app/comun/mazmorra/mazmorra.component.html
@@ -82,7 +82,7 @@
 	<!--   ******************* -->
 
     <!--
-	<img id="iconoSocial" src="../../../assets/Iconos/Icono-Social.png" (click)="this.appService.abandonarMazmorra()"/>
+	<img id="iconoSocial" src="../../../assets/Iconos/Icono-Social.png" (click)="this.appService.funcionDesarrollo()"/>
     -->
 
 		<!--   ******************* -->
