--- a/src/app/comun/inmap/inmap.component.html
+++ b/src/app/comun/inmap/inmap.component.html
@@ -79,7 +79,7 @@
 	<!--   ******************* -->
 	<div id="contenedorHeroes">
 
-        <heroeComponent *ngFor="let heroe of this.inmapService.sesion.render.heroes; let i = index" [renderMazmorra]="this.inmapService.sesion.render" [desplegable]="true" [renderHeroe]="heroe" [seleccionable]="false" [pantalla]="'inMap'" class="panelHeroe"></heroeComponent>
+        <heroeComponent *ngFor="let heroe of this.inmapService.sesion.render.heroes; let i = index" [renderMazmorra]="this.inmapService.sesion.render" [] [desplegable]="true" [renderHeroe]="heroe" [seleccionable]="false" [pantalla]="'inMap'" class="panelHeroe"></heroeComponent>
 
 	</div>
 
